log
Fri 22 Mar 2024 03:29:28 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|4
total_score: 10/70
fd8c146
Fri 22 Mar 2024 03:32:00 PM UTC: 
 exercises.c | 16 ++++++++++++----
 1 file changed, 12 insertions(+), 4 deletions(-)
 tests:  0|3
total_score: 20/70
c609a26
Fri 22 Mar 2024 03:39:27 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  3|2
total_score: 40/70
5e3e01b
Fri 22 Mar 2024 08:37:39 PM UTC: 
 exercises.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:104:11: error: invalid use of incomplete typedef ‘Stack’ {aka ‘List’}
  104 |   while(P1->top != NULL) {
      |           ^~
Compilation failed
4e0ae90
Fri 22 Mar 2024 08:37:59 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
ce628b2
Fri 22 Mar 2024 08:38:32 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|1
total_score: 50/70
15f8cf9
